2007-3-22 Patrick Galbraith <patg@grazr.com> (4.005)

* Fixed mysql_warning issue < 4.1 (reminers, patches, help from ROAM, (issue 25713)
* makerealclean patch from ROAM (issue #25714)
* sqlstate cleanup patch from ROAM



2007-3-22 Patrick Galbraith <patg@grazr.com> Jim Winstead <jimw@mysql.com> (4.004)
* Work around a bug in old 3.23 servers by specifying NOT NULL for fields used
  as a primary key in tests. (Bug #20325, reported by Julian Ladisch)
* Add support for mysql_warning_count statement handle attribute. (Bug #25457,
  patch from Philip Stoev)
* Add support for mysql_multi_statements connection option. (RT #12322, based
  on patch from Doug Morris)
* Had to bump to 4.003 do to print statement in mysql.pm that made it 
  into the dist. Even though you can delete a file on CPAN, you cannot 
  re-upload it if it's the same name. Mea Culpa.
* UTF8-Flag not set with flag mysql_enable_utf8 and column collation utf8_bin patch,
  Joost Diepenmaat, (RT #24738)
* Fixed do_error definition (Scott Hildreth, Tim Bunce)
* Conversion of test suite to Test::More

2007-3-5 Patrick Galbraith <patg@grazr.com> Jim Winstead <jimw@mysql.com> (4.003)
* Fix inclusion of non-primary keys in primary_key_info. (Bug #26786,
  reported and patch by Dave Rolsky)

2007-3-1 Patrick Galbraith <patg@grazr.com> Jim Winstead <jimw@mysql.com> (4.002)
* Fix re-exec of Makefile.PL when forcing $ENV{LANG} to 'C'. (RT #25233,
  reported by Slaven Rezic)
* Rewrote table_info method to support all arguments (previously it would
  only ever return all of the tables in the current database, no matter what
  was specified)
* Fixed $DBD::mysql::VERSION to be a string instead of a float, which caused
  problems for certain locales
* Fixed bug #23974. $dbh->column_info now returns handle with no rows upon 
  table not existing.  Much thanks to Tim Bunce for help fixing the problem
  in mysql.pm vs. dbdimp.c
* Removed #ifdefs for do error (sqlstate being passed as last arg depending on
  version)